urgency white text

--- a/form.html
+++ b/form.html
@@ -79,7 +79,7 @@
                     <h3>Ką gausite:</h3>
                     <div class="urgency-banner">
                         <i class="fas fa-clock"></i>
-                        <span class="urgency-text green-text">Nemokama konsultacija tik iki rugsėjo 31 d.!</span>
+                        <span class="urgency-text white-text">Nemokama konsultacija tik iki rugsėjo 31 d.!</span>
                     </div>
                     <div class="benefits-list">
                         <div class="benefit-item">
