--- a/form.html
+++ b/form.html
@@ -269,23 +269,8 @@
         </div>
     </footer>
 
+    <script src="script.js"></script>
     <script>
-        // Mobile Menu toggle function
-        function toggleMobileMenu() {
-            const mobileMenu = document.getElementById('mobileMenu');
-            const body = document.body;
-            
-            if (mobileMenu.classList.contains('active')) {
-                // Close menu
-                mobileMenu.classList.remove('active');
-                body.style.overflow = '';
-            } else {
-                // Open menu
-                mobileMenu.classList.add('active');
-                body.style.overflow = 'hidden';
-            }
-        }
-
         // Form submission
         document.getElementById('consultationForm').addEventListener('submit', function(e) {
             e.preventDefault();
@@ -328,29 +313,6 @@
                 }
             }
             e.target.value = value;
-        });
-
-        // Close mobile menu when clicking outside
-        document.addEventListener('click', function(e) {
-            const mobileMenu = document.getElementById('mobileMenu');
-            const mobileMenuButton = document.querySelector('.mobile-menu-button');
-            
-            if (mobileMenu && mobileMenu.classList.contains('active')) {
-                // Check if click is outside the mobile menu and not on the menu button
-                if (!mobileMenu.contains(e.target) && !mobileMenuButton.contains(e.target)) {
-                    toggleMobileMenu();
-                }
-            }
-        });
-
-        // Close mobile menu with Escape key
-        document.addEventListener('keydown', function(e) {
-            if (e.key === 'Escape') {
-                const mobileMenu = document.getElementById('mobileMenu');
-                if (mobileMenu && mobileMenu.classList.contains('active')) {
-                    toggleMobileMenu();
-                }
-            }
         });
     </script>
 </body>
